--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
                     <div class="image-layer" style="background-image:url(assets/images/banner/banner-1.jpg)"></div>
                     <div class="auto-container">
                         <div class="content-box">
-                            <span>Join the Summer Adventure</span>
-                            <h2>Ready For a <br />Summer Camp</h2>
-                            <div class="btn-box">
-                                <a href="index.html" class="theme-btn btn-one">Discover More</a>
+                            <span>Get Ready For A</span>
+                            <h2>Path Towards<br /> Allah</h2>
+                            <div class="btn-box navigation scroll-nav clearfix">
+                                <a href="#about" class="theme-btn btn-one">Discover More</a>
                             </div>
                         </div>
                     </div>
@@ -180,10 +180,10 @@
                     <div class="image-layer" style="background-image:url(assets/images/banner/banner-2.jpg)"></div>
                     <div class="auto-container">
                         <div class="content-box">
-                            <span>Join the Summer Adventure</span>
-                            <h2>Ready For a <br />Summer Camp</h2>
-                            <div class="btn-box">
-                                <a href="index.html" class="theme-btn btn-one">Discover More</a>
+                            <span>Visit Both Holy Lands</span>
+                            <h2>Makkah & <br />Madinah</h2>
+                            <div class="btn-box navigation scroll-nav clearfix">
+                                <a href="#about" class="theme-btn btn-one">Discover More</a>
                             </div>
                         </div>
                     </div>
@@ -206,17 +206,17 @@
                             <div class="feature-block-one">
                                 <div class="inner-box">
                                     <div class="icon-box"><i class="flaticon-cottage"></i></div>
-                                    <h5>Private Cottages</h5>
-                                    <p>Lorem ipsum dolor sit am adipi we help you ensure everyone.</p>
+                                    <h5>Best In Class Hotels</h5>
+                                    <p>We provide best in class star hotels in an AFFORDABLE Rate</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 feature-block">
                             <div class="feature-block-one">
                                 <div class="inner-box">
-                                    <div class="icon-box"><i class="flaticon-tent-1"></i></div>
-                                    <h5>Tents on Rent</h5>
-                                    <p>Lorem ipsum dolor sit am adipi we help you ensure everyone.</p>
+                                    <div class="icon-box"><i class="flaticon-plus"></i></div>
+                                    <h5>Additional Care</h5>
+                                    <p>We take in Extra efforts to satisfy our Hajis</p>
                                 </div>
                             </div>
                         </div>
@@ -224,8 +224,8 @@
                             <div class="feature-block-one">
                                 <div class="inner-box">
                                     <div class="icon-box"><i class="flaticon-military"></i></div>
-                                    <h5>Summer Camp</h5>
-                                    <p>Lorem ipsum dolor sit am adipi we help you ensure everyone.</p>
+                                    <h5>Ziyarah</h5>
+                                    <p>We take our Hajis to Historical Places for Ziyarah</p>
                                 </div>
                             </div>
                         </div>
@@ -233,15 +233,17 @@
                             <div class="feature-block-one">
                                 <div class="inner-box">
                                     <div class="icon-box"><i class="flaticon-fire"></i></div>
-                                    <h5>Wood Fire</h5>
-                                    <p>Lorem ipsum dolor sit am adipi we help you ensure everyone.</p>
+                                    <h5>Best Food</h5>
+                                    <p>We provide Indian Food to all our Hajis</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="lower-text centred">
-                    <span>Mauris vehicula, mi sed lobortis semper, nisi magna</span>
+                    <span>
+                        <p>Ceebros Centre<br /> #39/45, Montieth Road,<br /> Egmore - 600 008</p>
+                    </span> <br />
                     <h5><a href="tel:+917904109308">+91 79041 09308</a></h5>
                 </div>
             </div>
@@ -269,22 +271,21 @@
                             <div class="content-box">
                                 <div class="sec-title">
                                     <span class="sub-title">Our Introductions</span>
-                                    <h2>We’re Experienced Camp Organizer</h2>
+                                    <h2>We're Experienced Haj & Umrah Organizer</h2>
                                 </div>
                                 <div class="text">
-                                    <p>There are many variations of passages of is but the majority have suffered
-                                        alteration in some form, by injected humou or randomised words even slightly
-                                        believable.</p>
+                                    <p>We provide best in class Haj & Umrah services End-to-End to from Initial Guidance
+                                        till Departure</p>
                                 </div>
                                 <div class="inner-box">
                                     <div class="inner">
                                         <div class="icon-box"><i class="flaticon-camping"></i></div>
-                                        <span>Join Our <br />Camping Tour</span>
+                                        <span>Insha Allah <br />Join Our Next Haj</span>
                                     </div>
                                     <ul class="list-style-one clearfix">
-                                        <li>Making this the first true internet</li>
-                                        <li>Lorem Ipsum is not simply text</li>
-                                        <li>If you are going to a passage</li>
+                                        <li>Personalized Support Right from the beginning</li>
+                                        <li>Completing all the Ibadah</li>
+                                        <li>Best Hospitality</li>
                                     </ul>
                                 </div>
                             </div>
@@ -303,8 +304,8 @@
             <div class="auto-container">
                 <div class="inner-box">
                     <div class="sec-title light">
-                        <span class="sub-title">Cmapning That’s Right For You</span>
-                        <h2>Get Now Memorable Wonderful Outdoor Experiences</h2>
+                        <span class="sub-title">Our Hajis</span>
+                        <h2>Watch how our Hajis Started their Journey</h2>
                     </div>
                     <div class="video-btn">
                         <a href="assets/images/video.mp4" class="lightbox-image" data-caption=""
@@ -328,7 +329,7 @@
                                 <figure class="image-box"><img src="assets/images/resource/feature-1.jpg" alt="">
                                 </figure>
                                 <div class="lower-content">
-                                    <h3><a href="index-2.html">Tent Camp</a></h3>
+                                    <h3><a href="index-2.html">Guidance Programe</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -340,7 +341,7 @@
                                 <figure class="image-box"><img src="assets/images/resource/feature-2.jpg" alt="">
                                 </figure>
                                 <div class="lower-content">
-                                    <h3><a href="index-2.html">Wild Camp</a></h3>
+                                    <h3><a href="index-2.html">Departure Support</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -352,7 +353,7 @@
                                 <figure class="image-box"><img src="assets/images/resource/feature-3.jpg" alt="">
                                 </figure>
                                 <div class="lower-content">
-                                    <h3><a href="index-2.html">Family Camp</a></h3>
+                                    <h3><a href="index-2.html">Ziyarah Guidance</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -417,9 +418,9 @@
                     <div class="col-lg-6 col-md-12 col-sm-12 title-column">
                         <div class="sec-title">
                             <span class="sub-title">Get to Know Us</span>
-                            <h2>We’re the Best Summer Camping</h2>
-                            <p>Lorem ipsum is simply free text available in the market dolor sit amet, consectetur
-                                notted adipisicing elit sed do. Suspendisse finibus urna mauris, quam vel.</p>
+                            <h2>We're the Best Haj Umrah Travels</h2>
+                            <p>We strive our level best to be the best Haj & Umrah Service in not just in India but in
+                                the World</p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-12 content-column">
@@ -466,10 +467,11 @@
             <div class="auto-container">
                 <div class="inner-container">
                     <div class="text">
-                        <h2>Join Annual Summer Camp</h2>
+                        <h2>Join Our Next Haj / Umrah Group</h2>
                     </div>
-                    <div class="btn-box">
-                        <a href="contact.html" class="theme-btn btn-one">contact us</a>
+                    <div class="text">
+                        <h5>Call Us</h5>
+                        <h5><a href="tel:+917904109308">+91 79041 09308</a></h5>
                     </div>
                 </div>
             </div>
@@ -503,38 +505,16 @@
                             <h5>Call Anytime</h5>
                             <h3><a href="tel:+917904109308">+91 79041 09308</a></h3>
                         </div>
-                    </div>
-                </div>
-                <div class="widget-section">
-                    <div class="row clearfix">
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
-                            <div class="footer-widget contact-widget">
-                                <div class="widget-title">
-                                    <h4>Contact</h4>
-                                </div>
-                                <div class="widget-content">
-                                    <p>Ceebros Centre<br /> #39/45, Montieth Road,<br /> Egmore - 600 008</p>
-                                    <ul class="social-links clearfix">
-                                        <li><a href="https://www.facebook.com/ChennaiArRahmanhaj/"><i
-                                                    class="fab fa-facebook-f"></i></a></li>
-                                    </ul>
-                                </div>
+                        <div class="footer-widget contact-widget">
+                            <div class="widget-title">
+                                <h4 style="color: white">Our Locations</h4>
                             </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
-                            <div class="footer-widget newsletter-widget">
-                                <div class="widget-title">
-                                    <h4>Newsletter</h4>
-                                </div>
-                                <div class="widget-content">
-                                    <p>Subsrcibe for our upcoming latest articles and news resources</p>
-                                    <form action="contact.html" method="post" class="newsletter-form">
-                                        <div class="form-group">
-                                            <input type="email" name="email" placeholder="Email address" required>
-                                            <button type="submit"><i class="fas fa-paper-plane"></i></button>
-                                        </div>
-                                    </form>
-                                </div>
+                            <div class="widget-content">
+                                <p>Ceebros Centre<br /> #39/45, Montieth Road,<br /> Egmore - 600 008</p>
+                                <ul class="social-links clearfix">
+                                    <li><a href="https://www.facebook.com/ChennaiArRahmanhaj/"><i
+                                                class="fab fa-facebook-f"></i></a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
