--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                         <h2>Watch how our Hajis Started their Journey</h2>
                     </div>
                     <div class="video-btn">
-                        <a href="assets/images/video.mp4" class="lightbox-image" data-caption=""
+                        <a href="assets/images/images/1.mp4" class="lightbox-image" data-caption=""
                             style="background-image: url(assets/images/shape/shape-7.png);"><i
                                 class="fas fa-play"></i></a>
                     </div>
@@ -400,6 +400,83 @@
                         <div class="inner-box">
                             <figure class="image"><img src="assets/images/gallery/gallery-9.jpg" alt=""></figure>
                             <div class="view-btn"><a href="assets/images/gallery/gallery-9.jpg" class="lightbox-image"
+                                    data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
+                    </div>
+                    <div class="gallery-block-two">
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/images/1.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/images/1.jpeg" class="lightbox-image"
+                                    data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
+                    </div>
+                    <div class="gallery-block-two">
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/images/2.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/images/2.jpeg" class="lightbox-image"
+                                    data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
+                    </div>
+                    <div class="gallery-block-two">
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/images/3.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/images/3.jpeg" class="lightbox-image"
+                                    data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
+                    </div>
+                    <div class="gallery-block-two">
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/images/4.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/images/4.jpeg" class="lightbox-image"
+                                    data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
+                    </div>
+                    <div class="gallery-block-two">
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/images/5.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/images/5.jpeg" class="lightbox-image"
+                                    data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
+                    </div>
+                    <div class="gallery-block-two">
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/images/6.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/images/6.jpeg" class="lightbox-image"
+                                    data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
+                    </div>
+                    <div class="gallery-block-two">
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/images/7.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/images/7.jpeg" class="lightbox-image"
+                                    data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
+                    </div>
+                    <div class="gallery-block-two">
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/images/8.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/images/8.jpeg" class="lightbox-image"
+                                    data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
+                    </div>
+                    <div class="gallery-block-two">
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/images/9.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/images/9.jpeg" class="lightbox-image"
+                                    data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
+                    </div>
+                    <div class="gallery-block-two">
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/images/10.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/images/10.jpeg" class="lightbox-image"
+                                    data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
+                        </div>
+                    </div>
+                    <div class="gallery-block-two">
+                        <div class="inner-box">
+                            <figure class="image"><img src="assets/images/images/11.jpeg" alt=""></figure>
+                            <div class="view-btn"><a href="assets/images/images/11.jpeg" class="lightbox-image"
                                     data-fancybox="gallery"><i class="flaticon-plus"></i></a></div>
                         </div>
                     </div>
