--- a/index.html
+++ b/index.html
@@ -609,9 +609,16 @@
 
 
         <!-- scroll to top -->
-        <button class="scroll-top scroll-to-target" data-target="html">
-            <i class="fal fa-long-arrow-up"></i>
+        <button class="scroll-top scroll-to-target" style="background-color: white;">
+            <a href="https://api.whatsapp.com/send?phone=+917904109308&text=I would like to Visit Allah's House"
+                class="float" target="_blank">
+                <!-- <i class="fa fa-whatsapp"></i> -->
+                <img src="./assets/images/images/whatsapp.png" width="70%" />
+            </a>
         </button>
+        <!-- <button class="scroll-top scroll-to-target" data-target="html">
+            <i class="fal fa-long-arrow-up"></i>
+        </button> -->
     </div>
 
 
