removed typeform and added whatsform

--- a/index.html
+++ b/index.html
@@ -565,10 +565,11 @@
 
         </section>
         <!-- google-map-section end -->
-        <div data-tf-widget="nadWXvZy" data-tf-opacity="100"
+<!--         <div data-tf-widget="nadWXvZy" data-tf-opacity="100"
             data-tf-iframe-props="title=Ar Rahman Haj Chennai Enquiry Form" data-tf-transitive-search-params
             data-tf-medium="snippet" style="width:100%;height:500px;"></div>
-        <script src="//embed.typeform.com/next/embed.js"></script>
+        <script src="//embed.typeform.com/next/embed.js"></script> -->
+        <iframe src="https://whatsform.com/ypTOS2"  width="100%" height="600" frameBorder="0"></iframe>
 
 
         <!-- main-footer -->
